# resources_25

./: README.md  pyproject.toml
dependencies/: README.md
dependencies/conda/: mlmethods.yaml
notebooks/: C0_PyBasics.ipynb
slides/: 0_intro.pptx
